cmake_minimum_required (VERSION 3.8)

PROJECT(bitwuzla_jni)

FIND_PACKAGE(JNI REQUIRED)

SET(CXX_STANDARD 17)

SET(BITWUZLA_PROJECT_DIR "${PROJECT_SOURCE_DIR}/bitwuzla")

# Path to bitwuzla.h
SET(BITWUZLA_INCLUDE "${BITWUZLA_PROJECT_DIR}/include")

# Path to Bitwuzla sources root (required for extensions)
SET(BITWUZLA_SRC_ROOT "${BITWUZLA_PROJECT_DIR}/src")

# Path to bitwuzla library (libbitwuzla.so) 
SET(BITWUZLA_LIB "${BITWUZLA_PROJECT_DIR}/dist/lib/${CMAKE_SHARED_LIBRARY_PREFIX}bitwuzla${CMAKE_SHARED_LIBRARY_SUFFIX}")

ADD_LIBRARY (bitwuzla_jni SHARED bitwuzla_jni.cpp)

TARGET_INCLUDE_DIRECTORIES(bitwuzla_jni PRIVATE ${JNI_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(bitwuzla_jni PRIVATE ${BITWUZLA_INCLUDE})
TARGET_INCLUDE_DIRECTORIES(bitwuzla_jni PRIVATE "${BITWUZLA_SRC_ROOT}/lib")
TARGET_INCLUDE_DIRECTORIES(bitwuzla_jni PRIVATE ${BITWUZLA_SRC_ROOT})

SET(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

TARGET_LINK_LIBRARIES(bitwuzla_jni PRIVATE ${BITWUZLA_LIB} -static-libgcc -static-libstdc++)
